fdo#30519 paint scrolled area from the right surface

This adds a way to test whether mpCompositeSurface contains the front
buffer image, so it can be used as a source in painting operations.
It means the mpCompositeSurface changed status from 'temporary' to
'persistent' (which it was anyway, from implementation POV :-)

Change-Id: Iee4fc7a97cd60e47d0abb148e7337f0b50cabb40
Signed-off-by: David Tardon <dtardon@redhat.com>